--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ script: npm run build
 deploy:
  provider: pages
  skip_cleanup: true
- github_token: $GITHUB_TOKEN
+ token: $TOKEN
+ keep_history: true
  local_dir: dist
  on:
    branch: main
